Simpler Logic Partially Implemented
Co-authored-by: Copilot <copilot@github.com>