@@ -13,41 +13,29 @@ public class Bridge extends RoadSegment {
 
     @Override
     public void sweep(Lane lane) {
-        TestUtil.enterFunction("Bridge: sweep(lane)");
-
-        boolean rightLane = TestUtil.askUserYesNo("Is the swept lane the rightmost one?");
-
-        if (rightLane){
-            TestUtil.exitFunction("bridge no effect");
+        if (isRightLane(lane))
             return;
-        }
+        
 
-        Lane nextLane = lanes.get(0);
+        Lane nextLane = lanes.getFirst();
         float snowLevel = lane.getSnow();
         lane.destroySnow();
         nextLane.addSnow(snowLevel);
-
-        TestUtil.exitFunction("bridge swept");
     }
 
     @Override
     public void blow(Lane lane) {
-        TestUtil.enterFunction("Bridge: blow(lane)");
-
-        boolean rightLane = TestUtil.askUserYesNo("Is the blown lane the rightmost one?");
-
-        if (rightLane){
-            TestUtil.exitFunction("bridge no effect");
+        if (isRightLane(lane))
             return;
-        }
+        
 
-        Lane rightMostLane = lanes.get(lanes.size() - 1);
+        Lane rightMostLane = lanes.getLast();
         float snowLevel = lane.getSnow();
         lane.destroySnow();
         rightMostLane.addSnow(snowLevel);
+    }
 
-        
-    
-        TestUtil.exitFunction("bridge blown");
+    boolean isRightLane(Lane lane){
+        return lanes.getLast() == lane;
     }
 }
